fix: account route
