# api/swagger.yaml
@@ -39,6 +39,69 @@ definitions:
             activated_at:
               description: 啟用時間
               type: string
+            created_at:
+              description: 創建時間
+              type: string
+            created_by:
+              description: 創建者
+              type: string
+            deleted_at:
+              description: 刪除時間
+              type: string
+            industry_id:
+              description: 行業ID
+              type: string
+            industry_name:
+              description: 行業名稱
+              type: string
+            name:
+              description: 帳戶名稱
+              type: string
+            parent_account_id:
+              description: 父系帳戶ID
+              type: string
+            phone_number:
+              description: 帳戶電話
+              type: string
+            type:
+              description: 帳戶類型
+              type: string
+            updated_at:
+              description: 更新時間
+              type: string
+            updated_by:
+              description: 更新者
+              type: string
+          type: object
+        type: array
+      limit:
+        description: 筆數(請從1開始帶入,最高上限20)
+        type: integer
+      page:
+        description: 頁數(請從1開始帶入)
+        type: integer
+      pages:
+        description: 總頁數
+        type: integer
+      total:
+        description: 總筆數
+        type: integer
+    required:
+    - limit
+    - page
+    type: object
+  accounts.ListContacts:
+    properties:
+      accounts:
+        description: 多筆
+        items:
+          properties:
+            account_id:
+              description: 帳戶ID
+              type: string
+            activated_at:
+              description: 啟用時間
+              type: string
             contacts:
               description: contacts data
               items:
@@ -96,6 +159,48 @@ definitions:
     - page
     type: object
   accounts.Single:
+    properties:
+      account_id:
+        description: 帳戶ID
+        type: string
+      activated_at:
+        description: 啟用時間
+        type: string
+      created_at:
+        description: 創建時間
+        type: string
+      created_by:
+        description: 創建者
+        type: string
+      deleted_at:
+        description: 刪除時間
+        type: string
+      industry_id:
+        description: 行業ID
+        type: string
+      industry_name:
+        description: 行業名稱
+        type: string
+      name:
+        description: 帳戶名稱
+        type: string
+      parent_account_id:
+        description: 父系帳戶ID
+        type: string
+      phone_number:
+        description: 帳戶電話
+        type: string
+      type:
+        description: 帳戶類型
+        type: string
+      updated_at:
+        description: 更新時間
+        type: string
+      updated_by:
+        description: 更新者
+        type: string
+    type: object
+  accounts.SingleContacts:
     properties:
       account_id:
         description: 帳戶ID
@@ -2535,6 +2640,109 @@ paths:
                   type: string
               type: object
       summary: 更新單一帳戶
+      tags:
+      - account
+  /accounts/contacts:
+    get:
+      consumes:
+      - application/json
+      description: 取得全部帳戶含聯絡人
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 目前頁數,請從1開始帶入
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 一次回傳比數,請從1開始帶入,最高上限20
+        in: query
+        name: limit
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/accounts.ListContacts'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得全部帳戶含聯絡人
+      tags:
+      - account
+  /accounts/contacts/{accountID}:
+    get:
+      consumes:
+      - application/json
+      description: 取得單一帳戶含聯絡人
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 帳戶ID
+        in: path
+        name: accountID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/accounts.SingleContacts'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得單一帳戶含聯絡人
       tags:
       - account
   /campaigns:
