# internal/router/account/account_router.go
@@ -13,7 +13,9 @@ func GetRouter(router *gin.Engine, db *gorm.DB) *gin.Engine {
 	{
 		v10.POST("", middleware.Transaction(db), control.Create)
 		v10.GET("", control.GetByList)
+		v10.GET("contacts", control.GetByListContacts)
 		v10.GET(":accountID", control.GetBySingle)
+		v10.GET("contacts/:accountID", control.GetBySingleContacts)
 		v10.DELETE(":accountID", control.Delete)
 		v10.PATCH(":accountID", control.Update)
 	}
